...
                                                <constraint firstItem="itH-G7-Kal" firstAttribute="leading" secondItem="38M-Xa-tjI" secondAttribute="leadingMargin" id="AZ7-v4-Nca"/>
                                                <constraint firstItem="XFw-2q-BdT" firstAttribute="centerY" secondItem="38M-Xa-tjI" secondAttribute="centerY" id="BDe-8X-omv"/>
                                                <constraint firstAttribute="trailingMargin" secondItem="XFw-2q-BdT" secondAttribute="trailing" id="M2T-l7-Xje"/>
                                                <constraint firstItem="itH-G7-Kal" firstAttribute="centerY" secondItem="38M-Xa-tjI" secondAttribute="centerY" id="WPt-DY-HyD"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <accessibility key="accessibilityConfiguration" identifier="reminder_cell_access">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
                                        <connections>
                                            <segue destination="TcI-bI-5iX" kind="show" identifier="ShowDetailReminder" id="Uoa-aV-6Tw"/>
                                        </connections>
                                    </tableViewCell>
...
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gxx-lR-mAa" id="UsX-Fx-idf">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="47.666667938232422"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kTQ-ks-GYU" userLabel="Advanced Utilities">
                                                    <rect key="frame" x="125.66666666666669" y="9" width="124" height="30"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="setting_util_advanced_access"/>
                                                    <state key="normal" title="Advanced Utilities"/>
                                                    <connections>
                                                        <action selector="doUtilityShowAdvancedBtn:" destination="mGU-tx-G19" eventType="touchUpInside" id="KgT-fm-HKN"/>
                                                    </connections>
                                                </button>
                                            </subviews>
...
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="nvc-Bg-1fc" id="YPE-Ih-bpN">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="42.666667938232422"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WSr-wG-uFV">
                                                    <rect key="frame" x="309" y="5" width="51.666666666666686" height="32.666666666666664"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="reminder_settings_enable_access"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" secondItem="WSr-wG-uFV" secondAttribute="height" multiplier="47:31" id="yCq-I5-1gU"/>
                                                    </constraints>
                                                    <connections>
                                                        <action selector="doReminderSwitched:" destination="TcI-bI-5iX" eventType="valueChanged" id="4hG-GP-lbH"/>
                                                    </connections>
...
