...
        super.viewDidLoad()
        navigationController?.navigationBar.tintColor = ColorManager.style.mainMedium
        navigationController?.navigationBar.tintColor = UIColor.white
        navigationController?.navigationBar.titleTextAttributes = [NSAttributedString.Key.foregroundColor: UIColor.white]
        navigationController?.navigationBar.isTranslucent = false
        
        mainTabBarController.tabBar.accessibilityIdentifier = "navtab_access"
        
        // Global App Settings
        setupUnitsType()
        setupReminders()
        setupTabNaviation()
        
...
        tabSettingsViewController.title = titleSettings
        let tabSettingsItem = UITabBarItem(
            title: titleSettings,
            image: UIImage(named: "ic_tabapp_settings"),
            tag: 0
        )
        tabSettingsItem.accessibilityIdentifier = "navtab_preferences_access"
        tabSettingsViewController.tabBarItem = tabSettingsItem
        controllerArray.append(tabSettingsViewController)

        // Main Nav Bar Controller
        var navControllerArray = [UINavigationController]()
        for vc in controllerArray {
...
