...
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hG4-mX-ruv" id="1cD-HS-zjM">
                                            <rect key="frame" x="0.0" y="0.0" width="390" height="53"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eFl-tL-qa9">
                                                    <rect key="frame" x="128" y="11.666666666666664" width="134" height="30"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="util_db_btn_export_access"/>
                                                    <state key="normal" title="Export History Data"/>
                                                    <connections>
                                                        <action selector="doUtilityRealmDBExportBtn:" destination="CD1-9a-Pcp" eventType="touchUpInside" id="Iti-Xd-QXK"/>
                                                    </connections>
                                                </button>
                                            </subviews>
...
